# ORB-Research

./: .gitignore  CTI-Censys-파이프라인-구현-설계도.md  CTI-Censys-파이프라인-도식.md  ORB-논문-구성안-개정.md  README.md  pyproject.toml
configs/: 2026-07-14-ioc-extract-strict-scope-v1.md  2026-07-14-ioc-extract-v1.md  base.yaml  reuse_sources.yaml
docs/: 2026-07-15-cti-research-이관-보고서.md  2026-07-15-phase-a-completion.md  2026-07-15-stage0-completion.md  2026-07-15-stage0-publication-time-increment.md  2026-07-15-stage0-source-family-increment.md  2026-07-16-phase-b-completion.md  2026-07-16-phase-c-completion.md  2026-07-16-phase-d-completion.md  2026-07-16-phase-e-completion.md
src/: __init__.py  cli.py  config.py  manifests.py  models.py  provenance.py
src/adapters/: __init__.py  cti_agent.py  (+1 more)
tests/: __init__.py  test_background.py  test_brave_search.py  test_candidate_evidence.py  test_candidate_ledger.py  test_censys_adapter.py  test_cli_integration.py  test_config_validation.py  test_continuity.py  test_cti_adapter.py  test_cti_cli_pipeline.py  test_cti_ioc_extraction.py  test_cti_search_execution.py  test_cti_workflow.py  test_cutoff_integrity.py  test_feature_registry.py  test_features.py  test_internal_error_policy.py  test_internal_hash_manifest.py  test_internal_reuse.py  test_paginated_collection.py  test_phase_d_registry.py  test_phase_e_registry.py  test_pivot_planning.py  test_pivot_precheck.py  test_pivot_safety.py  test_prospective_scheduler.py  test_q0_seed.py  test_query_composer.py  test_query_freeze.py  test_query_registry.py  test_reuse_equivalence.py
(+39 files in other folders)
